@@ -10,6 +10,7 @@ import java.util.List;
  * @Modified By:
  */
 public class RuntimeConstantPoolOOM {
+//    -XX:PermSize=10M -XX:MaxPermSize=10M
     public static void main(String[] args) {
         List<String> list = new ArrayList<>();
         int i = 0;
